K8s/namespace-chat.yml
apiVersion: v1
kind: Namespace
metadata:
  name: simplechat
  labels:
    name:
      simplechat
