K8s/01-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: simplechat
spec:
#  type: NodePort
  ports:
    - name: zookeeper-port
      protocol: TCP
      port: 2181
#      nodePort: 30181
      targetPort: 2181
  selector:
    app: zookeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: simplechat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeper
  template:
    metadata:
      labels:
        app: zookeper
    spec:
      containers:
        - image: confluentinc/cp-zookeeper:6.2.0
          imagePullPolicy: IfNotPresent
          name: zookeeper
          ports:
            - protocol: TCP
              containerPort: 2181
