K8s/chatdb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatdb-deployment
  namespace: simplechat
  labels:
    app: chatdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatdb
  template:
    metadata:
      labels:
        app: chatdb
    spec:
      containers:
        - name: chatdb
          image: postgres:14.3-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: chatdb-service
  namespace: simplechat
spec:
  selector:
    app: chatdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
