K8s/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: simplechat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: simplechat
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
#          resources:
#            limits:
#              cpu: 1
#              memory: 0.5G
#            requests:
#              cpu: 1
#              memory: 0.5G
---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: configmap-mongodb
#  namespace: simplechat
#data:
##  MONGO_INITDB_HOST: PLAINTEXT://mongodb:27017/chat_mongo
##  MONGO_INITDB_PORT: 27017
##  MONGO_INITDB_DATABASE: chat_mongo
##  MONGO_INITDB_ROOT_USERNAME: QWRtaW4=
#  spring.data.mongodb.host: localhost
#  spring.data.mongodb.port: 27017
#  spring.data.mongodb.database: chat_mongo
#  spring.data.mongodb.username: QWRtaW4=
