K8s/simplechat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplechat
  namespace: simplechat
  labels:
    app: simplechat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplechat
  template:
    metadata:
      labels:
        app: simplechat
    spec:
      containers:
        - name: simplechat
          image: euhenios/simplechat:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

#          envFrom:
#            - configMapRef:
#                name: configmap-chatdb
#            - configMapRef:
#                name: configmap-mongo
#            - configMapRef:
#                name: configmap-kafka
---
apiVersion: v1
kind: Service
metadata:
  name: simplechat-service
  namespace: simplechat
spec:
  selector:
    app: simplechat
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8880
      targetPort: 8080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplechat-ingress
  namespace: simplechat
  labels:
    app: simplechat
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.ver
      http:
        paths:
          - backend:
              service:
                name: simplechat-service
                port:
                  number:
                    8880
            path: /source(/|$)(.*)
            pathType: Prefix
  defaultBackend:
    service:
      name: simplechat-service
      port:
        number: 8080
